// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> should match to snapshot when activeOutsideClose === true 1`] = `
<Modal
  ariaHideApp={false}
  bodyOpenClassName="ReactModal__Body--open"
  className="Modal__container"
  closeTimeoutMS={0}
  contentLabel="Modal"
  isOpen={true}
  overlayClassName="Modal__overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <OutsideClickHandler
    onOutSideClick={[Function]}
  >
    <Component
      activeOutsideClose={true}
      onModalClose={[Function]}
    />
  </OutsideClickHandler>
</Modal>
`;

exports[`<Modal /> should match to snapshot when props.Component exist 1`] = `
<Modal
  ariaHideApp={false}
  bodyOpenClassName="ReactModal__Body--open"
  className="Modal__container"
  closeTimeoutMS={0}
  contentLabel="Modal"
  isOpen={true}
  overlayClassName="Modal__overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <Component
    onModalClose={[Function]}
  />
</Modal>
`;

exports[`<Modal /> should match to snapshot when render default 1`] = `""`;
